syntax = "proto3";

package proto;

option go_package = "github.com/kmaskasem/grpc-authen-microservice/proto";

service UserService {
  rpc GetProfile(GetProfileRequest)         returns (GetProfileResponse);
  rpc UpdateProfile(UpdateProfileRequest)   returns (UpdateProfileResponse);
  rpc DeleteProfile(DeleteProfileRequest)   returns (DeleteProfileResponse);
  rpc ListUsers(ListUsersRequest)           returns (ListUsersResponse);
}

message User {
  string id            = 1; 
  string name          = 2;
  string email         = 3;
  bool   is_deleted    = 5;
}

message GetProfileRequest {
  string id = 1;
}
message GetProfileResponse {
  User user = 1;
}

message UpdateProfileRequest {
  string id    = 1;
  string name  = 2;
  string email = 3;
}

message UpdateProfileResponse {
  User user = 1;
}

message DeleteProfileRequest {
  string id = 1;
}

message DeleteProfileResponse {
  google.protobuf.Empty empty = 1;
}

message ListUsersRequest {
  string filter_name  = 1;
  string filter_email = 2;
  int32  page         = 3; 
  int32  limit        = 4; 
}

message ListUsersResponse {
  repeated User users = 1;
  int32 total         = 2; 
}
